User-visible changes in version 0.7.7  (2006-  -  ):
* fixed GCC 4.1 compilation problem 

User-visible changes in version 0.7.6  (2006-09-15):
* changes to the manual sent by Michael Richardson
* erf and erfc functions can be used in data transformations and UDFs
* command "dump" works now
* changed syntax for exporing function parameters and formulae
  (info peaks in @0 > filename; info formula in @0 > filename) 
* guess command supports now not only "peaks", but also "linear" functions
* GUI: improved peak dragging, full-screen mode (F11), configurable status bar,
  minor tics on plot axes, function parameters can be locked (frozen) using
  buttons at sidebar, improved "Data->Load File (custom)" dialog
* a bunch of other improvements, bugs fixes and optimizations

User-visible changes in version 0.7.5  (2006-07-31):
* GUI: Definition Manager dialog
* user defined functions (UDF) 
* GUI: gradient dialog for changing color of many datasets at once
* GUI: new Fit->Run dialog
* So-called domain of simple-variables can be specified ($a = ~3.5 [3 +- 2]),
  it is used only for randomization of the variable by some fitting methods.
* "info" can be redirected to file using "info ... > filename" syntax 
   to truncate the file and "info ... >> file" to appends to the file
* variables with names starting with "_" are auto-deleted when not used
* parameters of Lev-Mar methods can be changed (it was disabled in 0.7.0)
* GUI: pressing Shift in data range mode allows (dis)activate data in rectangle
* r-squared shown in "info fit" output (Emmanuel Lamprecht)
* a few bug fixes

User-visible changes in version 0.7.4  (2006-05-31):
* improved data and sum export
* GUI: optional grid in main plot (see axes configuration dialog) 
* defined function types can be undefined using "undefine Function" syntax
* with option=value[, option2=value2 ...] command ...
  sets value of options for this command only
* GUI: if cut-function-level is set, function limits are shown when cursor 