@@ -1,5 +1,12 @@
 User-visible changes in version 0.7.7  (2006-  -  ):
 * fixed GCC 4.1 compilation problem 
+* GUI: plot buffering (as a bitmap); disabling menu, toolbar, etc. when fitting
+* new option guess-at-center-pm (float), used by "guess Type center=$variable"
+* ascii data loading: column number of 0 generates a number increasing 
+  with each point
+* 
+
+
 
 User-visible changes in version 0.7.6  (2006-09-15):
 * changes to the manual sent by Michael Richardson
